# Computer-Graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build-scripts/: build.bat
rasterizer/: main.cpp
raytracer/: main.cpp
